5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1884_3179.log
== TEST (2019-07-04 18:36:24) 
-- CODE:
from numpy import*
v = array(eval(input("digite um vetor de numeros inteiros: ")))
z = zeros(v, dtype=int)
cont = 0
for i in z:
	if i == 1:
		cont = cont + 1
cont2 = 0
for j in cont:
	if i =! 1:
		cont2 = cont2 + 1
		z = cont + cont2
print(z)

-- ERROR:
File "XXXX", line 10
    if i =! 1:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:39:00) 
-- CODE:
from numpy import*
v = array(eval(input("digite um vetor de numeros inteiros: ")))
cont = 0
for i in v:
	if i == 1:
		cont = cont + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:39:10) 
-- CODE:
from numpy import*
v = array(eval(input("digite um vetor de numeros inteiros: ")))
cont = 0
for i in v:
	if i == 1:
		cont = cont + 1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:58:23) 
-- CODE:
from numpy import*
v = array(eval(input("digite um vetor de numeros inteiros: ")))
cont = 0
for i in v:
	if i == 1:
		cont = cont + 1
z = ones(v, dtype=int)
cont = 0
for j in z:
	if j != 1:
		z[cont] = j
		cont += 1
print(z)
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:58:59) 
-- CODE:
from numpy import*
v = array(eval(input("digite um vetor de numeros inteiros: ")))
cont = 0
for i in v:
	if i == 1:
		cont = cont + 1
z = ones(v, dtype=int)
cont = 0
for j in z:
	if j != 1:
		z[cont] = j
		cont += 1
print(z)
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:59:16) 
-- CODE:
from numpy import*
v = array(eval(input("digite um vetor de numeros inteiros: ")))
cont = 0
for i in v:
	if i == 1:
		cont = cont + 1
z = ones(size(v), dtype=int)
cont = 0
for j in z:
	if j != 1:
		z[cont] = j
		cont += 1
print(z)
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 18:59:52) 
-- CODE:
from numpy import*
v = array(eval(input("digite um vetor de numeros inteiros: ")))
cont = 0
for i in v:
	if i == 1:
		cont = cont + 1
z = ones(size(v), dtype=int)
cont = 0
for j in v:
	if j != 1:
		z[cont] = j
		cont += 1
print(z)
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 19:00:00) 
-- CODE:
from numpy import*
v = array(eval(input("digite um vetor de numeros inteiros: ")))
cont = 0
for i in v:
	if i == 1:
		cont = cont + 1
z = ones(size(v), dtype=int)
cont = 0
for j in v:
	if j != 1:
		z[cont] = j
		cont += 1
print(z)
	
		
	
-- EXECUTION TIME:
1.21018
-- TEST CASE 1:
---- input:
[2,3,4,1,1,1,-1]
---- correct output:
[ 2  3  4 -1  1  1  1]
---- user output:
[ 2  3  4 -1  1  1  1]
-- TEST CASE 2:
---- input:
[1,1,1,5,4,3,2]
---- correct output:
[5 4 3 2 1 1 1]
---- user output:
[5 4 3 2 1 1 1]
-- TEST CASE 3:
---- input:
[1,0,1,2,0,1,4,1,5]
---- correct output:
[0 2 0 4 5 1 1 1 1]
---- user output:
[0 2 0 4 5 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
